--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "react": "^16.8.4",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0"
